--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -39,7 +39,7 @@
                 </div>
                 <div class="col-sm">
                     <h3 class="text-decoration-underline">Gestion des Achats</h3>
-                    <a href="{{ path('app_index') }}"><img class="border border-dark"
+                    <a href="{{ path('app_achat_index') }}"><img class="border border-dark"
                                                                    src="{{ asset('images/logos/achats.png') }}" width="250"
                                                                    alt="achats"/></a>
                 </div>
