--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -113,83 +113,106 @@ body {
 /*  Formulaire     */
 /*-----------------*/
 
-.forms {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background: linear-gradient(45deg, greenyellow, dodgerblue);
-}
-
 .form {
-    position: relative;
-    padding: 50px 50px;
-    background: #fff;
-    border-radius: 10px;
-}
-
-.form h1 {
-    font-size: 2em;
-    border-left: 5px solid dodgerblue;
-    padding: 10px;
-    color: #000;
-    letter-spacing: 5px;
-    margin-bottom: 60px;
-    font-weight: bold;
-    padding-left: 10px;
-}
-
-.form .inputbox {
-    position: relative;
-    width: 300px;
-    height: 50px;
-    margin-bottom: 50px;
-}
-
-.form .inputbox input {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    border: 2px solid #000;
-    outline: none;
-    background: none;
-    padding: 10px;
-    border-radius: 10px;
-    font-size: 1.2em;
-}
-
-.form .inputbox:last-child {
-    margin-bottom: 0;
-}
-
-.form .inputbox span {
-    position: absolute;
-    top: 14px;
-    left: 20px;
-    font-size: 1em;
-    transition: 0.6s;
+    background-color: #15172b;
+    border-radius: 20px;
+    box-sizing: border-box;
+    height: 500px;
+    padding: 20px;
+    width: 320px;
     font-family: sans-serif;
 }
 
-.form .inputbox input:focus ~ span,
-.form .inputbox input:valid ~ span {
-    transform: translateX(-13px) translateY(-35px);
-    font-size: 1em;
+.title {
+    color: #eee;
+    font-family: sans-serif;
+    font-size: 36px;
+    font-weight: 600;
+    margin-top: 30px;
 }
 
-.form .inputbox [type="button"], .form .inputbox [type="submit"] {
-    width: 50%;
-    background: dodgerblue;
-    color: #fff;
-    border: #fff;
+.subtitle {
+    color: #eee;
+    font-family: sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    margin-top: 10px;
 }
 
-.form .inputbox:hover [type="button"], .form .inputbox:hover [type="submit"] {
-    background: linear-gradient(45deg, greenyellow, dodgerblue);
+.input-container {
+    height: 50px;
+    position: relative;
+    width: 100%;
+}
+
+.ic1 {
+    margin-top: 40px;
+}
+
+.ic2 {
+    margin-top: 30px;
+}
+
+.input {
+    background-color: #303245;
+    border-radius: 12px;
+    border: 0;
+    box-sizing: border-box;
+    color: #eee;
+    font-size: 18px;
+    height: 100%;
+    outline: 0;
+    padding: 4px 20px 0;
+    width: 100%;
+}
+
+.input:focus ~ .cut,
+.input:not(:placeholder-shown) ~ .cut {
+    transform: translateY(8px);
+}
+
+.placeholder {
+    color: #65657b;
+    font-family: sans-serif;
+    left: 20px;
+    line-height: 14px;
+    pointer-events: none;
+    position: absolute;
+    transform-origin: 0 50%;
+    transition: transform 200ms, color 200ms;
+    top: 20px;
+}
+
+.input:focus ~ .placeholder,
+.input:not(:placeholder-shown) ~ .placeholder {
+    transform: translateY(-30px) translateX(10px) scale(0.75);
+}
+
+.input:not(:placeholder-shown) ~ .placeholder {
+    color: #808097;
+}
+
+.input:focus ~ .placeholder {
+    color: #dc2f55;
+}
+
+.submit {
+    background-color: #08d;
+    border-radius: 12px;
+    border: 0;
+    box-sizing: border-box;
+    color: #eee;
+    cursor: pointer;
+    font-size: 18px;
+    height: 50px;
+    margin-top: 38px;
+    outline: 0;
+    text-align: center;
+    width: 100%;
+}
+
+.submit:active {
+    background-color: #06b;
 }
 
 /*-----------------*/
@@ -197,61 +220,79 @@ body {
 /*-----------------*/
 
 .button {
+    padding: 0.6em 2em;
     border: none;
-    padding: 0.8em 2.5em;
     outline: none;
-    color: white;
-    font-style: 1.2em;
-    position: relative;
-    z-index: 1;
+    color: rgb(255, 255, 255);
+    background: #111;
     cursor: pointer;
-    background: none;
-    text-shadow: 3px 3px 10px rgba(0, 0, 0, 0.45);
-}
-
-.button:before,
-.button:after {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    border-radius: 10em;
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    transform: translateX(-50%) translateY(-50%);
-    width: 105%;
-    height: 105%;
-    content: "";
-    z-index: -2;
-    background-size: 400% 400%;
-    background: linear-gradient(
-            60deg,
-            /*#f79533,
-            #f37055,
-            #ef4e7b,
-            #a166ab,*/
-            #5073b8,
-            #1098ad,
-            #07b39b,
-            #6fba82
-    );
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
 }
 
 .button:before {
-    -webkit-filter: blur(7px);
-    filter: blur(7px);
-    -webkit-transition: all 0.25s ease;
-    transition: all 0.25s ease;
-    -webkit-animation: pulse 10s infinite ease;
-    animation: pulse 10s infinite ease;
+    content: "";
+    background: linear-gradient(
+            45deg,
+            #ff0000,
+            #ff7300,
+            #fffb00,
+            #48ff00,
+            #00ffd5,
+            #002bff,
+            #7a00ff,
+            #ff00c8,
+            #ff0000
+    );
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowingbn5 20s linear infinite;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    border-radius: 10px;
 }
 
-.button:after {
-    -webkit-filter: blur(0.3px);
-    filter: blur(0.3px);
+@keyframes glowingbn5 {
+    0% {
+        background-position: 0 0;
+    }
+    50% {
+        background-position: 400% 0;
+    }
+    100% {
+        background-position: 0 0;
+    }
+}
+
+.button:active {
+    color: #000;
+}
+
+.button:active:after {
+    background: transparent;
 }
 
 .button:hover:before {
-    width: 115%;
-    height: 115%;
+    opacity: 1;
+}
+
+.button:after {
+    z-index: -1;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #191919;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
 }
 
 /*-----------------*/
@@ -281,6 +322,7 @@ body {
 .gold {
     color: darkgoldenrod;
 }
+
 .avi {
     width: 25%;
 }
