--- a/templates/avis/_delete_form.html.twig
+++ b/templates/avis/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_avis_delete', {'id': avi.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_avis_delete', {'id': avi.id}) }}" onsubmit="return confirm('Voulez-vous vraiment supprimer cet Avis ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ avi.id) }}">
-    <button class="btn">Delete</button>
+    <button class="button">Delete</button>
 </form>
