--- a/templates/matiere/_form.html.twig
+++ b/templates/matiere/_form.html.twig
@@ -1,4 +1,4 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="button">{{ button_label|default('Créer') }}</button>
+    <button class="submit">{{ button_label|default('Créer') }}</button>
 {{ form_end(form) }}
