--- a/templates/matiere/edit.html.twig
+++ b/templates/matiere/edit.html.twig
@@ -1,13 +1,14 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="forms">
-        <div class="form align-content-center text-center">
-            <h1>Modifier une Matière Première</h1>
+    <br/>
+    <div class="form m-auto align-content-center text-center">
+        <h1 class="h2 text-white">Modifier une Matière Première</h1>
 
-            {{ include('matiere/_form.html.twig', {'button_label': 'Modifier'}) }}
-            <br/>
-            <a href="{{ path('app_matiere_index') }}"><button class="button">Retour à la liste</button></a>
-        </div>
+        {{ include('matiere/_form.html.twig', {'button_label': 'Modifier'}) }}
+        <br/>
+        <a href="{{ path('app_matiere_index') }}">
+            <button class="submit">Retour à la liste</button>
+        </a>
     </div>
 {% endblock %}
