--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,37 +1,36 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="forms">
-        <div class="form">
-            <form method="post">
-                {% if error %}
-                    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-                {% endif %}
+    <br/>
+    <div class="form m-auto text-center">
+        <form method="post">
+            {% if error %}
+                <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+            {% endif %}
 
-                {% if app.user %}
-                        <div class="mb-3">
-                            Tu es connecté en tant que {{ app.user.username }}, <a href="{{ path('app_logout') }}">Se
-                                déconnecter</a>
-                        </div>
-                {% endif %}
+            {% if app.user %}
+                <div class="mb-3">
+                    Tu es connecté en tant que {{ app.user.username }}, <a href="{{ path('app_logout') }}">Se
+                        déconnecter</a>
+                </div>
+            {% endif %}
 
-                <h1 class="h3 mb-3 font-weight-normal">Connectez-vous</h1>
-                <div class="inputbox">
-                    <input type="text" value="{{ last_username }}" name="username" id="inputUsername"
-                           class="form-control" autocomplete="username" placeholder="Nom d'utilisateur" required
-                           autofocus>
-                </div>
-                <div class="inputbox">
-                    <input type="password" name="password" id="inputPassword" class="form-control"
-                           autocomplete="current-password" placeholder="Mot de passe" required>
-                </div>
-                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-                <div class="inputbox checkbox mb-3">
-                    <label for="rememberme">Se souvenir de moi</label>
-                    <input type="checkbox" id="rememberme" name="_remember_me">
-                </div>
-                <button class="button" type="submit">Se connecter</button>
-            </form>
-        </div>
+            <h1 class="title">Connectez-vous</h1>
+            <div class="input-container ic2">
+                <input type="text" value="{{ last_username }}" name="username" id="inputUsername"
+                       class="form-control input" autocomplete="username" placeholder="Nom d'utilisateur" required
+                       autofocus>
+            </div>
+            <div class="input-container ic2">
+                <input type="password" name="password" id="inputPassword" class="form-control input"
+                       autocomplete="current-password" placeholder="Mot de passe" required>
+            </div>
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+            <div class="input-container ic2">
+                <label for="rememberme" class="text-white">Se souvenir de moi</label>
+                <input type="checkbox" id="rememberme" name="_remember_me">
+            </div>
+            <button class="submit" type="submit">Se connecter</button>
+        </form>
     </div>
 {% endblock %}
