Fix links with forms

--- a/templates/avis/new.html.twig
+++ b/templates/avis/new.html.twig
@@ -9,7 +9,7 @@
 
         {{ include('achat/_form.html.twig') }}
         <br/>
-        <a href="{{ path('app_achat_index') }}">
+        <a href="{{ path('app_avis_index') }}">
             <button class="submit">Retour aux avis</button>
         </a>
     </div>
