--- a/templates/achat/index.html.twig
+++ b/templates/achat/index.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-
+{% set montant = 0 %}
 {% block body %}
     <div class="container align-content-center text-center">
         <h1>Liste des Matières Premières</h1>
@@ -8,7 +8,7 @@
             <thead>
             <tr>
                 <th>Date</th>
-                <th>Prix</th>
+                <th>Montant</th>
                 <th colspan="3">Action</th>
             </tr>
             </thead>
@@ -16,7 +16,10 @@
             {% for achat in achats %}
                 <tr>
                     <td>{{ achat.date ? achat.date|date('d/m/Y') : '' }}</td>
-                    <td>{{ achat.prix }}</td>
+                    {% for detail in achat.detailAchats %}
+                        {% set montant = montant + detail.prix %}
+                    {% endfor %}
+                    <td>{{ montant }}</td>
                     <td><a href="{{ path('app_achat_show', {'id': achat.id}) }}">
                             <button class="button">Afficher</button>
                         </a></td>
@@ -33,6 +36,12 @@
             </tbody>
         </table>
 
-        <a href="{{ path('app_achat_new') }}"><button class="button">Créer un nouveau Achat</button></a>
+        <a href="{{ path('app_achat_new') }}">
+            <button class="button">Créer un nouveau Achat</button>
+        </a>
+
+        <a href="{{ path('app_detail_achat_index') }}">
+            <button class="button">Vers les details</button>
+        </a>
     </div>
 {% endblock %}
