--- a/templates/avis/index.html.twig
+++ b/templates/avis/index.html.twig
@@ -58,7 +58,7 @@
             {% endfor %}
         </div>
         <a class="d-flex flex-wrap justify-content-center text-decoration-none" href="{{ path('app_avis_new') }}">
-            <button class="button">Donnez le votre"</button>
+            <button class="button">Donnez le votre</button>
         </a>
     </div>
 {% endblock %}
