--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -54,13 +54,12 @@ body {
 }
 
 .titre {
-    color: orchid;
-    text-decoration: underline;
+    color: crimson;
     font-weight: bold;
     font-size: 30px;
 }
 
-.plats, .normands, .autres {
+/*.plats, .normands, .autres {
     color: orangered;
 }
 
@@ -70,7 +69,7 @@ body {
 
 .boissons, .alcool {
     color: royalblue;
-}
+}*/
 
 /*-----------------*/
 /*  Navbar         */
@@ -106,7 +105,7 @@ body {
 .nav ul li a:hover {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1), inset 0 0 1px rgba(255, 255, 255, 0.6);
     background: rgba(255, 255, 255, 0.1);
-    color: rgba(0, 35, 122, 0.7);
+    color: orangered;
 }
 
 /*-----------------*/
