--- a/templates/achat/index.html.twig
+++ b/templates/achat/index.html.twig
@@ -9,7 +9,7 @@
             <tr>
                 <th>Date</th>
                 <th>Montant</th>
-                <th colspan="3">Action</th>
+                <th colspan="2">Action</th>
             </tr>
             </thead>
             <tbody>
@@ -20,17 +20,15 @@
                         {% set montant = montant + detail.prix %}
                     {% endfor %}
                     <td>{{ montant }}</td>
+                    {% set montant = 0 %}
                     <td><a href="{{ path('app_achat_show', {'id': achat.id}) }}">
                             <button class="button">Afficher</button>
-                        </a></td>
-                    <td><a href="{{ path('app_achat_edit', {'id': achat.id}) }}">
-                            <button class="button">Modifier</button>
                         </a></td>
                     <td>{{ include('achat/_delete_form.html.twig') }}</td>
                 </tr>
             {% else %}
                 <tr>
-                    <td colspan="5">Aucun achat trouvé</td>
+                    <td colspan="4">Aucun achat trouvé</td>
                 </tr>
             {% endfor %}
             </tbody>
