Change front end and add flash message and ui

--- a/templates/carte/index.html.twig
+++ b/templates/carte/index.html.twig
@@ -7,7 +7,7 @@
         <div class="carte">
             <div class="container">
                 <div class="plats container">
-                    <h2 id="plats" class="titre">Les plats</h2>
+                    <h2 id="plats" class="titre">Les poutines</h2>
                     <br/>
                     {% for plat in plats %}
                         <div class="produit">
@@ -25,7 +25,7 @@
             <div class="container">
                 <div class="frites container">
                     <br/>
-                    <h2 id="frites" class="titre">Les frites barquettes</h2>
+                    <h2 id="frites" class="titre">Les frites portions</h2>
                     <br/>
                     {% for frite in frites %}
                         <div class="produit">
@@ -37,7 +37,7 @@
             </div>
             <div class="container">
                 <div class="autres container">
-                    <h2 id="autres" class="titre">Petite faim</h2>
+                    <h2 id="autres" class="titre">Les </h2>
                     <br/>
                     {% for autre in autres %}
                         <div class="produit">
@@ -57,7 +57,7 @@
                 </div>
                 <br/>
                 <div class="boissons container">
-                    <h2 id="boissons" class="titre">Les breuvages !</h2>
+                    <h2 id="boissons" class="titre">Les breuvages</h2>
                     <br/>
                     {% for boisson in boissons %}
                         <div class="produit">
