Added Perte and Casse and modifie possible

--- a/templates/achat/index.html.twig
+++ b/templates/achat/index.html.twig
@@ -2,7 +2,7 @@
 {% set montant = 0 %}
 {% block body %}
     <div class="container align-content-center text-center">
-        <h1>Liste des Matières Premières</h1>
+        <h1>Liste des Achats</h1>
 
         <table class="table">
             <thead>
