--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -24,13 +24,9 @@
                                                                         width="250" alt="localisations"/></a>
                 </div>
             </div>
+            <br/>
+            <br/>
             <div class="row">
-                <div class="col-sm">
-                    <h3 class="text-decoration-underline">Gestion des Ventes</h3>
-                    <a href="{{ path('app_vente') }}"><img class="border border-dark"
-                                                           src="{{ asset('images/logos/ventes.png') }}" width="250"
-                                                           alt="ventes"/></a>
-                </div>
                 <div class="col-sm">
                     <h3 class="text-decoration-underline">Gestion des Matières Premières</h3>
                     <a href="{{ path('app_matiere_index') }}"><img class="border border-dark"
@@ -38,10 +34,10 @@
                                                                    alt="matiere"/></a>
                 </div>
                 <div class="col-sm">
-                    <h3 class="text-decoration-underline">Gestion des Achats</h3>
-                    <a href="{{ path('app_achat_index') }}"><img class="border border-dark"
-                                                                   src="{{ asset('images/logos/achats.png') }}" width="250"
-                                                                   alt="achats"/></a>
+                    <h3 class="text-decoration-underline">Gestion des Mouvements Stocks</h3>
+                    <a href="{{ path('app_mouvement') }}"><img class="border border-dark"
+                                                                   src="{{ asset('images/logos/stock.png') }}" width="250"
+                                                                   alt="mouvements"/></a>
                 </div>
             </div>
         </div>
