--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -57,7 +57,7 @@
                 <figure>
                     <img src="{{ asset('images/logos/parcours.png') }}" width="50" alt="parcours"/>
                     <figcaption>
-                        Mon Parcours
+                        Qui sommes nous
                     </figcaption>
                 </figure>
             </a>
