--- a/templates/parcours/index.html.twig
+++ b/templates/parcours/index.html.twig
@@ -1,13 +1,29 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-<div class="container text-center">
-    <h1 class="text-decoration-underline">Mon Parcours</h1>
+<div class="container">
+    <h1 class="text-decoration-underline text-center">Qui sommes nous</h1>
     <img class="float-sm-start" src="{{ asset('images/thierry.jpg') }}" alt="thierry" width="300">
-    <p class="">
-        Thierry André, Née le 21 novembre 1970.
+    <p class="h4 text-nowrap text-center">
         <br/>
-        Diplomé des CAP (Cuisine et Salle).
-        blablabla
+        <br/>
+        Thierry André, née le 21 novembre 1970.
+        <br/>
+        Diplomé de CAP Cuisine et CAP Salle.
+        <br/>
+        <br/>
+        Je suis un ancien Chef de Rang du Restaurant <cite>"LE PROCOPE"</cite> à Paris 6.
+        <br/>
+        Suite à ceci j'ai été Maître d'Hôtel dans <cite>"LA BRASSERIE LES ARTISTES"</cite> à Paris La Défense.
+        <br/>
+        Ensuite j'ai été Directeur Adjoint pour l'ouverture d'un <cite>"HIPPOPOTAMUS"</cite> toujours à Paris La Défense.
+        <br/>
+        J'ai fini Directeur d'Exploitation de deux Restaurant <cite>"QUAI MARINE"</cite> et <cite>"WOK BY TIGER WOK"</cite>.
+        <br/>
+        <br/>
+        <br/>
+        Avec les récents événements liés à la Covid-19 les restaurants ont été contrains de fermer, mais l'idée d'ouvrir mon FoodTruck était dans ma tête.
+        <br/>
+        C'est pourquoi je suis ici pour vous proposer mon experience dans la restauration en vous apportant une bonne cuisine près de chez vous.
     </p>
 </div>
 {% endblock %}
