--- a/templates/detail_perte/edit.html.twig
+++ b/templates/detail_perte/edit.html.twig
@@ -7,7 +7,7 @@
 
         {{ include('detail_perte/_form.html.twig', {'button_label': 'Modifier'}) }}
         <br/>
-        <a href="{{ path('app_detail_perte_index') }}">
+        <a href="{{ path('app_perte_index')  }}">
             <button class="submit">Retour à la liste</button>
         </a>
     </div>
