--- a/templates/localisation/index.html.twig
+++ b/templates/localisation/index.html.twig
@@ -37,5 +37,8 @@
         </table>
 
         <a href="{{ path('app_localisation_new') }}"><button class="button">Créer une nouvelle Localisation</button></a>
+        <a href="{{ path('app_admin') }}">
+            <button class="button">Vers l'Administration</button>
+        </a>
     </div>
 {% endblock %}
