--- a/templates/parcours/index.html.twig
+++ b/templates/parcours/index.html.twig
@@ -8,22 +8,22 @@
         <br/>
         Thierry André, née le 21 novembre 1970.
         <br/>
-        Diplomé de CAP Cuisine et CAP Salle.
+        Diplomé d'un CAP Cuisine et d'un CAP Salle.
         <br/>
         <br/>
-        Je suis un ancien Chef de Rang du Restaurant <cite>"LE PROCOPE"</cite> à Paris 6.
+        J'ai été Chef de Rang du Restaurant <cite>"LE PROCOPE"</cite> à Paris 6 (Le plus ancien Restaurant de Paris.)
         <br/>
-        Suite à ceci j'ai été Maître d'Hôtel dans <cite>"LA BRASSERIE LES ARTISTES"</cite> à Paris La Défense.
+        Suite de cela, j'ai intégré le Restaurant <cite>"LA BRASSERIE LES ARTISTES"</cite> à Paris La Défense en tant que Maitre d'Hotel,
         <br/>
-        Ensuite j'ai été Directeur Adjoint pour l'ouverture d'un <cite>"HIPPOPOTAMUS"</cite> toujours à Paris La Défense.
+        par la suite, j'ai ouvert en tant que Directeur Adjoint l'ancien Restaurant <cite>"HIPPOPOTAMUS"</cite> du CNIT à Paris La Défense,
         <br/>
-        J'ai fini Directeur d'Exploitation de deux Restaurant <cite>"QUAI MARINE"</cite> et <cite>"WOK BY TIGER WOK"</cite>.
+        pour finir Directeur d'Exploitation des deux Restaurant <cite>"QUAI MARINE"</cite> et <cite>"WOK BY TIGER WOK"</cite> au CNIT à Paris La Défense.
         <br/>
         <br/>
         <br/>
-        Avec les récents événements liés à la Covid-19 les restaurants ont été contrains de fermer, mais l'idée d'ouvrir mon FoodTruck était dans ma tête.
+        Avec les récents événements liés à la Covid-19 les restaurants ont été contrains de fermer, mais l'idée d'ouvrir mon FoodTruck m'a toujours passionné,
         <br/>
-        C'est pourquoi je suis ici pour vous proposer mon experience dans la restauration en vous apportant une bonne cuisine près de chez vous.
+        c'est pourquoi je suis ici pour vous proposer mon experience dans la restauration en vous apportant une bonne cuisine près de chez vous.
     </p>
 </div>
 {% endblock %}
