--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -59,18 +59,6 @@ body {
     font-size: 30px;
 }
 
-/*.plats, .normands, .autres {
-    color: orangered;
-}
-
-.desserts, .frites {
-    color: maroon;
-}
-
-.boissons, .alcool {
-    color: royalblue;
-}*/
-
 /*-----------------*/
 /*  Navbar         */
 /*-----------------*/
@@ -323,5 +311,13 @@ body {
 }
 
 .avi {
-    width: 25%;
+    width: 30%;
+}
+
+/*-----------------*/
+/*  Admin          */
+/*-----------------*/
+
+.admin_logo {
+    width: 40%;
 }
