--- a/templates/achat/index.html.twig
+++ b/templates/achat/index.html.twig
@@ -9,7 +9,7 @@
             <tr>
                 <th>Date</th>
                 <th>Montant</th>
-                <th colspan="2">Action</th>
+                <th colspan="3">Action</th>
             </tr>
             </thead>
             <tbody>
@@ -25,21 +25,26 @@
                             <button class="button">Afficher</button>
                         </a></td>
                     <td>{{ include('achat/_delete_form.html.twig') }}</td>
+                    <td>
+                        <a href="{{ path('app_detail_achat_index', {'date': achat.date|date('Y-m-d')}) }}">
+                            <button class="button">Vers les details</button>
+                        </a>
+                    </td>
                 </tr>
             {% else %}
                 <tr>
-                    <td colspan="4">Aucun achat trouvé</td>
+                    <td colspan="5">Aucun achat trouvé</td>
                 </tr>
             {% endfor %}
             </tbody>
         </table>
-
-        <a href="{{ path('app_achat_new') }}">
-            <button class="button">Créer un nouveau Achat</button>
-        </a>
-
-        <a href="{{ path('app_detail_achat_index') }}">
-            <button class="button">Vers les details</button>
-        </a>
+        <div class="buttons">
+            <a href="{{ path('app_achat_new') }}">
+                <button class="button">Créer un nouveau Achat</button>
+            </a>
+            <a href="{{ path('app_mouvement') }}">
+                <button class="button">Vers les mouvements</button>
+            </a>
+        </div>
     </div>
 {% endblock %}
