--- a/templates/detail_achat/index.html.twig
+++ b/templates/detail_achat/index.html.twig
@@ -2,13 +2,12 @@
 
 {% block body %}
     <div class="container align-content-center text-center">
-        <h1>Liste des Achats</h1>
+        <h1>Liste des Achats du {{ date | date('d/m/Y') }}</h1>
         <table class="table">
             <thead>
             <tr>
-                <th>Date</th>
                 <th>Matiere</th>
-                <th>Quantite</th>
+                <th>Quantité</th>
                 <th>Prix</th>
                 <th colspan="2">Actions</th>
             </tr>
@@ -16,7 +15,6 @@
             <tbody>
             {% for detail_achat in detail_achats %}
                 <tr>
-                    <td>{{ detail_achat.achat.date | date('d/m/Y') }}</td>
                     <td>{{ detail_achat.matiere }}</td>
                     <td>{{ detail_achat.quantite }}</td>
                     <td>{{ detail_achat.prix }}</td>
@@ -27,12 +25,13 @@
                 </tr>
             {% else %}
                 <tr>
-                    <td colspan="6">Aucun achat trouvé</td>
+                    <td colspan="5">Aucun achat trouvé</td>
                 </tr>
             {% endfor %}
             </tbody>
         </table>
 
         <a href="{{ path('app_detail_achat_new') }}"><button class="button">Créer un nouveau Produit dans un Achat</button></a>
+        <a href="{{ path('app_achat_index') }}"><button class="button">Vers les Achats</button></a>
     </div>
 {% endblock %}
