--- a/templates/detail_achat/new.html.twig
+++ b/templates/detail_achat/new.html.twig
@@ -7,7 +7,7 @@
 
         {{ include('detail_achat/_form.html.twig') }}
         <br/>
-        <a href="{{ path('app_detail_achat_index') }}">
+        <a href="{{ path('app_achat_index') }}">
             <button class="submit">Retour à la liste</button>
         </a>
     </div>
