--- a/templates/detail_perte/index.html.twig
+++ b/templates/detail_perte/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="container align-content-center text-center">
-        <h1>Liste des Pertes</h1>
+        <h1>Liste des Pertes du {{ date }}</h1>
         <table class="table">
             <thead>
             <tr>
@@ -32,5 +32,6 @@
         </table>
 
         <a href="{{ path('app_detail_perte_new') }}"><button class="button">Créer un nouveau Produit dans une Perte</button></a>
+        <a href="{{ path('app_perte_index') }}"><button class="button">Vers les Pertes</button></a>
     </div>
 {% endblock %}
