--- a/templates/detail_vente/edit.html.twig
+++ b/templates/detail_vente/edit.html.twig
@@ -7,7 +7,7 @@
 
         {{ include('detail_vente/_form.html.twig', {'button_label': 'Modifier'}) }}
         <br/>
-        <a href="{{ path('app_detail_vente_index') }}">
+        <a href="{{ path('app_vente_index') }}">
             <button class="submit">Retour à la liste</button>
         </a>
     </div>
