--- a/templates/detail_vente/index.html.twig
+++ b/templates/detail_vente/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="container align-content-center text-center">
-        <h1>Liste des Ventes</h1>
+        <h1>Liste des Ventes du {{ date }}</h1>
         <table class="table">
             <thead>
             <tr>
@@ -32,5 +32,6 @@
         </table>
 
         <a href="{{ path('app_detail_vente_new') }}"><button class="button">Créer un nouveau Produit dans une Vente</button></a>
+        <a href="{{ path('app_vente_index') }}"><button class="button">Vers les Ventes</button></a>
     </div>
 {% endblock %}
