--- a/templates/mouvement/index.html.twig
+++ b/templates/mouvement/index.html.twig
@@ -2,32 +2,32 @@
 
 {% block body %}
 
-    <div class="container text-center">
-        <h1>Gestion des mouvement du stock</h1>
-        <div class="row">
-            <div class="col-sm">
-                <h3 class="text-decoration-underline">Gestion des Achats</h3>
-                <a href="{{ path('app_achat_index') }}"><img class="border border-dark"
-                                                               src="{{ asset('images/logos/achats.png') }}"
-                                                               width="250"
-                                                               alt="produits"/></a>
-            </div>
-            <div class="col-sm">
-                <h3 class="text-decoration-underline">Gestion des Pertes</h3>
-                <a href="{{ path('app_perte_index') }}"><img class="border border-dark"
-                                                                    src="{{ asset('images/logos/pertes.png') }}"
-                                                                    width="250" alt="localisations"/></a>
-            </div>
+<div class="container text-center">
+    <h1>Gestion des mouvement du stock</h1>
+    <div class="d-flex flex-wrap justify-content-center">
+        <div class="m-3 admin_logo">
+            <h3 class="text-decoration-underline">Gestion des Achats</h3>
+            <a href="{{ path('app_achat_index') }}"><img class="border border-dark"
+                                                         src="{{ asset('images/logos/achats.png') }}"
+                                                         width="250"
+                                                         alt="produits"/></a>
         </div>
-        <br/>
-        <br/>
-        <div class="row">
-            <div class="col-sm">
-                <h3 class="text-decoration-underline">Gestion des Ventes</h3>
-                <a href="{{ path('app_vente_index') }}"><img class="border border-dark"
-                                                       src="{{ asset('images/logos/ventes.png') }}" width="250"
-                                                       alt="ventes"/></a>
-            </div>
+        <div class="m-3 admin_logo">
+            <h3 class="text-decoration-underline">Gestion des Pertes</h3>
+            <a href="{{ path('app_perte_index') }}"><img class="border border-dark"
+                                                         src="{{ asset('images/logos/pertes.png') }}"
+                                                         width="250" alt="localisations"/></a>
+        </div>
+        <div class="m-3 admin_logo">
+            <h3 class="text-decoration-underline">Gestion des Ventes</h3>
+            <a href="{{ path('app_vente_index') }}"><img class="border border-dark"
+                                                         src="{{ asset('images/logos/ventes.png') }}" width="250"
+                                                         alt="ventes"/></a>
+        </div>
+        <div class="m-3 w-100">
+            <a href="{{ path('app_admin') }}">
+                <button class="button">Vers l'Administration</button>
+            </a>
         </div>
     </div>
-{% endblock %}
+    {% endblock %}
