--- a/templates/produit/index.html.twig
+++ b/templates/produit/index.html.twig
@@ -19,7 +19,9 @@
                     <td>{{ produit.nom }}</td>
                     <td>{{ produit.prix }} €</td>
                     <td>{{ produit.type }}</td>
-                    <td><a href="{{ path('app_produit_edit', {'id': produit.id}) }}"><button class="button">Modifier</button></a></td>
+                    <td><a href="{{ path('app_produit_edit', {'id': produit.id}) }}">
+                            <button class="button">Modifier</button>
+                        </a></td>
                     <td>{{ include('produit/_delete_form.html.twig') }}</td>
                 </tr>
             {% else %}
@@ -29,6 +31,11 @@
             {% endfor %}
             </tbody>
         </table>
-        <a href="{{ path('app_produit_new') }}"><button class="button">Créer un nouveau Produit</button></a>
+        <a href="{{ path('app_produit_new') }}">
+            <button class="button">Créer un nouveau Produit</button>
+        </a>
+        <a href="{{ path('app_admin') }}">
+            <button class="button">Vers l'Administration</button>
+        </a>
     </div>
 {% endblock %}
