--- a/templates/vente/index.html.twig
+++ b/templates/vente/index.html.twig
@@ -8,7 +8,7 @@
             <tr>
                 <th>Date</th>
                 <th>Nombre de produit</th>
-                <th colspan="2">Action</th>
+                <th colspan="3">Action</th>
             </tr>
             </thead>
             <tbody>
@@ -20,10 +20,15 @@
                             <button class="button">Afficher</button>
                         </a></td>
                     <td>{{ include('vente/_delete_form.html.twig') }}</td>
+                    <td>
+                        <a href="{{ path('app_detail_vente_index', {'date': vente.date|date('Y-m-d')}) }}">
+                            <button class="button">Vers les details</button>
+                        </a>
+                    </td>
                 </tr>
             {% else %}
                 <tr>
-                    <td colspan="4">Aucune vente trouvé</td>
+                    <td colspan="5">Aucune vente trouvé</td>
                 </tr>
             {% endfor %}
             </tbody>
@@ -32,9 +37,8 @@
         <a href="{{ path('app_vente_new') }}">
             <button class="button">Créer une nouvelle Vente</button>
         </a>
-
-        <a href="{{ path('app_detail_vente_index') }}">
-            <button class="button">Vers les details</button>
+        <a href="{{ path('app_mouvement') }}">
+            <button class="button">Vers les mouvements</button>
         </a>
     </div>
 {% endblock %}
