Fix ui, change logo et fix de bug

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,9 @@
     <script src="https://kit.fontawesome.com/0583a05b6b.js" crossorigin="anonymous"></script>
 </head>
 <body>
+<div class="loader position-absolute text-center m-auto">
+    <img src="{{ asset('images/logos/icon.jpg') }}"/>
+</div>
 <nav class="nav">
     <ul class="mx-auto">
         <li>
