--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -321,3 +321,29 @@ body {
 .admin_logo {
     width: 40%;
 }
+
+/*-----------------*/
+/*  Loader         */
+/*-----------------*/
+
+.loader {
+    cursor : wait;
+    width: 100%;
+    height: 100%;
+    background: gray;
+    z-index: 99999;
+}
+
+.loader img {
+    margin-top: 12%;
+    animation: rotation 1s infinite linear;
+}
+
+@keyframes rotation {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(-400deg);
+    }
+}
